[package]
name = "hello_web3"
version = "0.1.0"
edition = "2021"
default-run = "hello_web3"

[dependencies]
ethers = "1.0.2"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
